Fixed bug with Internet Explorer - Resource Title was limited to 10 pixels tall, which meant that the layout broke if the title wrapped. I have commented out this line, hopefully it was not added to fix an unrelated IE layout issue.
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@1573 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/globalIE.css
+++ b/css/globalIE.css
@@ -6,7 +6,6 @@ body {width:97.5%;font-size: 70%;}
 #SearchBox { position: relative; margin-left: 0; }
 .SearchSpace .SearchWidth {width: 155px; }
 .HomePanel {margin:0px 15px 7px 0px;} 
-.RecordHeader h1 {height:10px;}
 .StyledTabbedPanel div { position: relative; display: inline-block; }
 #RecordDownload { margin-right: 10px; }
 
